<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".ui.fragments.CommingSoonItemFragment">


    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/RightGuideline"
        app:layout_constraintStart_toStartOf="@+id/LeftGuideline"
       app:layout_constraintTop_toBottomOf="@+id/horizontalGuideline">


        <ImageView
            android:id="@+id/iconBack"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:background="@drawable/btn_back"
            android:src="@drawable/ic_arrow_back"
            android:paddingStart="10dp"/>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:elevation="14dp"
            app:cardCornerRadius="8dp">

            <ImageView
                android:id="@+id/cityImage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/city1"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvCityNameItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/city_name"
                android:textSize="22sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tvCityReviewItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_alignParentEnd="true"
                android:text="@string/review_number"
                android:textColor="@color/blue_button_background"
                android:textSize="12sp"/>
        </RelativeLayout>

        <TextView
            android:id="@+id/tvCityDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/long_text_description"
            android:textSize="14sp"/>

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/LeftGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.03892944" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/RightGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96107054" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontalGuideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.06" />
</androidx.constraintlayout.widget.ConstraintLayout>